# PivotPoint

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/plans/v01/: frontend-init.md  fyers_auth.md  outputs_init.md  project-init.md
.github/workflows/: daily-evening-test.yml  daily-evening.yml  daily-morning-test.yml  daily-morning.yml  evening-report.yml  morning-report.yml  sync-secrets.yml
docs/: first_run_log.md
docs/documentation/v0/: architecture.md
docs/superpowers/specs/: 2026-03-22-fyers-auth-design.md  2026-03-23-daily-report-outputs-design.md
docs/v0/: strategy_guide.md
outputs/: __init__.py  base_report_formatter.py
outputs/discord/: __init__.py  bot.py  formatter.py  report_formatter.py
outputs/telegram/: __init__.py  bot.py  formatter.py  report_formatter.py
outputs/website/: __init__.py  schema.py  writer.py
secrets/: README.md
src/data_science/: __init__.py
src/data_science/ai/: __init__.py
src/data_science/ml/: __init__.py
src/pivotpoint/: __init__.py  cli.py
src/pivotpoint/config/: __init__.py  settings.py
src/pivotpoint/data/: __init__.py  provider.py  validators.py
src/quant/: __init__.py  cli.py
tests/: conftest.py
tests/unit/: test_config.py  test_daily_report_models.py  test_discord_formatter.py  test_discord_report_formatter.py  test_exceptions.py  test_fyers_auth.py  test_fyers_cache.py  test_fyers_client.py  test_fyers_exceptions.py  test_fyers_greeks.py  test_fyers_provider.py  test_fyers_settings.py  test_fyers_symbols.py  test_fyers_ws.py  test_holiday_checker.py  test_identity.py  test_models.py  test_portfolio_tracker.py  test_position_sizer.py  test_report_engine.py  test_risk_manager.py  test_strategies_parametrized.py  test_telegram_formatter.py  test_telegram_report_formatter.py  test_types.py
(+171 files in other folders)
