[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pivotpoint"
version = "0.1.0"
description = "Options trading signal generation system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "structlog>=24.1.0",
    "discord.py>=2.3.0,<3.0.0",
    "python-telegram-bot>=21.0,<22.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "aiosqlite>=0.20.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "click>=8.1.0,<9.0.0",
    "fyers-apiv3>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "freezegun>=1.4.0",
]

[project.scripts]
pivotpoint = "pivotpoint.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks slow tests",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src/pivotpoint"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
